added content to page

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: IMERI AI homepage
-description: Homepage for IMERI AI course docs
+title: AI in Healthcare
+description: An AI online course brought by IMERI FKUI
